--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
+    "expo-av": "~10.2.0",
+    "expo-screen-orientation": "~4.1.1",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
@@ -28,6 +30,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
+    "react-native-swiper-flatlist": "^3.0.16",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1"
   },
