--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-grid-image-viewer": "^1.2.2",
     "react-native-navigation": "^7.25.0",
+    "react-native-push-notification": "^3.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
